--- a/dhtsearch.conf
+++ b/dhtsearch.conf
@@ -21,8 +21,8 @@
 
     RewriteEngine On
     
-    # if a directory or a file exists, use it directly
-    # otherwise forward it to index.php as a function call
+    # if the request matches a directory or file name, use those directly,
+    # otherwise forward the request to index.php as a function call
     RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} !-f
     RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} !-d
     RewriteRule (.*) /index.php$1
